# My-news

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/my-news/: SKILL.md
config/: newsboat.conf
feeds/: urls
skills/my-news/: SKILL.md
skills/my-news/references/: install.md
skills/my-news/scripts/: setup.sh
src/my_news/: cli.py  doctor.py  extract.py  newsboat.py  render.py
