[project]
name = "my-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KaleLjl", email = "52370166+KaleLjl@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-news = "my_news.cli:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
